Updated data to 01/03/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -316,6 +316,7 @@
 <script src=IntData_283.js></script>
 <script src=IntData_284.js></script>
 <script src=IntData_285.js></script>
+<script src=IntData_286.js></script>
 
 <script>
 
