--- a/covid19reg.html
+++ b/covid19reg.html
@@ -316,6 +316,7 @@
 <script src=RegData_283.js></script>
 <script src=RegData_284.js></script>
 <script src=RegData_285.js></script>
+<script src=RegData_286.js></script>
 
 <script>
 
