--- a/covid19state.html
+++ b/covid19state.html
@@ -259,6 +259,7 @@
 <script src=USAData_283.js></script>
 <script src=USAData_284.js></script>
 <script src=USAData_285.js></script>
+<script src=USAData_286.js></script>
 
 <script>
 
