--- a/covid19usa.html
+++ b/covid19usa.html
@@ -284,6 +284,7 @@
 <script src=USAData_283.js></script>
 <script src=USAData_284.js></script>
 <script src=USAData_285.js></script>
+<script src=USAData_286.js></script>
 
 <script>
 
