Updated data to 01/05/2020 (two day update)

--- a/covid19int.html
+++ b/covid19int.html
@@ -317,6 +317,8 @@
 <script src=IntData_284.js></script>
 <script src=IntData_285.js></script>
 <script src=IntData_286.js></script>
+<script src=IntData_287.js></script>
+<script src=IntData_288.js></script>
 
 <script>
 
