--- a/covid19reg.html
+++ b/covid19reg.html
@@ -317,6 +317,8 @@
 <script src=RegData_284.js></script>
 <script src=RegData_285.js></script>
 <script src=RegData_286.js></script>
+<script src=RegData_287.js></script>
+<script src=RegData_288.js></script>
 
 <script>
 
