--- a/covid19state.html
+++ b/covid19state.html
@@ -260,6 +260,8 @@
 <script src=USAData_284.js></script>
 <script src=USAData_285.js></script>
 <script src=USAData_286.js></script>
+<script src=USAData_287.js></script>
+<script src=USAData_288.js></script>
 
 <script>
 
