Updated data to 01/07/2020 (two days)

--- a/covid19int.html
+++ b/covid19int.html
@@ -319,6 +319,8 @@
 <script src=IntData_286.js></script>
 <script src=IntData_287.js></script>
 <script src=IntData_288.js></script>
+<script src=IntData_289.js></script>
+<script src=IntData_290.js></script>
 
 <script>
 
