--- a/covid19reg.html
+++ b/covid19reg.html
@@ -319,6 +319,8 @@
 <script src=RegData_286.js></script>
 <script src=RegData_287.js></script>
 <script src=RegData_288.js></script>
+<script src=RegData_289.js></script>
+<script src=RegData_290.js></script>
 
 <script>
 
