--- a/covid19usa.html
+++ b/covid19usa.html
@@ -287,6 +287,8 @@
 <script src=USAData_286.js></script>
 <script src=USAData_287.js></script>
 <script src=USAData_288.js></script>
+<script src=USAData_289.js></script>
+<script src=USAData_290.js></script>
 
 <script>
 
