--- a/covid19state.html
+++ b/covid19state.html
@@ -262,6 +262,8 @@
 <script src=USAData_286.js></script>
 <script src=USAData_287.js></script>
 <script src=USAData_288.js></script>
+<script src=USAData_289.js></script>
+<script src=USAData_290.js></script>
 
 <script>
 
