--- a/covid19int.html
+++ b/covid19int.html
@@ -321,6 +321,7 @@
 <script src=IntData_288.js></script>
 <script src=IntData_289.js></script>
 <script src=IntData_290.js></script>
+<script src=IntData_291.js></script>
 
 <script>
 
