--- a/covid19reg.html
+++ b/covid19reg.html
@@ -321,6 +321,7 @@
 <script src=RegData_288.js></script>
 <script src=RegData_289.js></script>
 <script src=RegData_290.js></script>
+<script src=RegData_291.js></script>
 
 <script>
 
