--- a/covid19usa.html
+++ b/covid19usa.html
@@ -289,6 +289,7 @@
 <script src=USAData_288.js></script>
 <script src=USAData_289.js></script>
 <script src=USAData_290.js></script>
+<script src=USAData_291.js></script>
 
 <script>
 
