Updated data to 01/09/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -322,6 +322,7 @@
 <script src=IntData_289.js></script>
 <script src=IntData_290.js></script>
 <script src=IntData_291.js></script>
+<script src=IntData_292.js></script>
 
 <script>
 
