--- a/covid19reg.html
+++ b/covid19reg.html
@@ -322,6 +322,7 @@
 <script src=RegData_289.js></script>
 <script src=RegData_290.js></script>
 <script src=RegData_291.js></script>
+<script src=RegData_292.js></script>
 
 <script>
 
