--- a/covid19usa.html
+++ b/covid19usa.html
@@ -290,6 +290,7 @@
 <script src=USAData_289.js></script>
 <script src=USAData_290.js></script>
 <script src=USAData_291.js></script>
+<script src=USAData_292.js></script>
 
 <script>
 
