Updated data to 01/10/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -323,6 +323,7 @@
 <script src=IntData_290.js></script>
 <script src=IntData_291.js></script>
 <script src=IntData_292.js></script>
+<script src=IntData_293.js></script>
 
 <script>
 
