--- a/covid19usa.html
+++ b/covid19usa.html
@@ -291,6 +291,7 @@
 <script src=USAData_290.js></script>
 <script src=USAData_291.js></script>
 <script src=USAData_292.js></script>
+<script src=USAData_293.js></script>
 
 <script>
 
