--- a/covid19reg.html
+++ b/covid19reg.html
@@ -323,6 +323,7 @@
 <script src=RegData_290.js></script>
 <script src=RegData_291.js></script>
 <script src=RegData_292.js></script>
+<script src=RegData_293.js></script>
 
 <script>
 
