Updated data to 01/11/2020

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -292,6 +292,7 @@
 <script src=USAData_291.js></script>
 <script src=USAData_292.js></script>
 <script src=USAData_293.js></script>
+<script src=USAData_294.js></script>
 
 <script>
 
