--- a/covid19int.html
+++ b/covid19int.html
@@ -324,6 +324,7 @@
 <script src=IntData_291.js></script>
 <script src=IntData_292.js></script>
 <script src=IntData_293.js></script>
+<script src=IntData_294.js></script>
 
 <script>
 
