--- a/covid19reg.html
+++ b/covid19reg.html
@@ -324,6 +324,7 @@
 <script src=RegData_291.js></script>
 <script src=RegData_292.js></script>
 <script src=RegData_293.js></script>
+<script src=RegData_294.js></script>
 
 <script>
 
