Updated data to 01/12/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -325,6 +325,7 @@
 <script src=IntData_292.js></script>
 <script src=IntData_293.js></script>
 <script src=IntData_294.js></script>
+<script src=IntData_295.js></script>
 
 <script>
 
