--- a/covid19reg.html
+++ b/covid19reg.html
@@ -325,6 +325,7 @@
 <script src=RegData_292.js></script>
 <script src=RegData_293.js></script>
 <script src=RegData_294.js></script>
+<script src=RegData_295.js></script>
 
 <script>
 
