--- a/covid19state.html
+++ b/covid19state.html
@@ -268,6 +268,7 @@
 <script src=USAData_292.js></script>
 <script src=USAData_293.js></script>
 <script src=USAData_294.js></script>
+<script src=USAData_295.js></script>
 
 <script>
 
