--- a/covid19usa.html
+++ b/covid19usa.html
@@ -293,6 +293,7 @@
 <script src=USAData_292.js></script>
 <script src=USAData_293.js></script>
 <script src=USAData_294.js></script>
+<script src=USAData_295.js></script>
 
 <script>
 
