Updated data to 01/13/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -326,6 +326,7 @@
 <script src=IntData_293.js></script>
 <script src=IntData_294.js></script>
 <script src=IntData_295.js></script>
+<script src=IntData_296.js></script>
 
 <script>
 
