--- a/covid19reg.html
+++ b/covid19reg.html
@@ -326,6 +326,7 @@
 <script src=RegData_293.js></script>
 <script src=RegData_294.js></script>
 <script src=RegData_295.js></script>
+<script src=RegData_296.js></script>
 
 <script>
 
