--- a/covid19usa.html
+++ b/covid19usa.html
@@ -294,6 +294,7 @@
 <script src=USAData_293.js></script>
 <script src=USAData_294.js></script>
 <script src=USAData_295.js></script>
+<script src=USAData_296.js></script>
 
 <script>
 
