Updated data to 01/14/2021

--- a/covid19state.html
+++ b/covid19state.html
@@ -270,6 +270,7 @@
 <script src=USAData_294.js></script>
 <script src=USAData_295.js></script>
 <script src=USAData_296.js></script>
+<script src=USAData_297.js></script>
 
 <script>
 
