--- a/covid19int.html
+++ b/covid19int.html
@@ -327,6 +327,7 @@
 <script src=IntData_294.js></script>
 <script src=IntData_295.js></script>
 <script src=IntData_296.js></script>
+<script src=IntData_297.js></script>
 
 <script>
 
