--- a/covid19reg.html
+++ b/covid19reg.html
@@ -327,6 +327,7 @@
 <script src=RegData_294.js></script>
 <script src=RegData_295.js></script>
 <script src=RegData_296.js></script>
+<script src=RegData_297.js></script>
 
 <script>
 
