Updated data to 01/16/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -329,6 +329,7 @@
 <script src=IntData_296.js></script>
 <script src=IntData_297.js></script>
 <script src=IntData_298.js></script>
+<script src=IntData_299.js></script>
 
 <script>
 
