--- a/covid19usa.html
+++ b/covid19usa.html
@@ -297,6 +297,7 @@
 <script src=USAData_296.js></script>
 <script src=USAData_297.js></script>
 <script src=USAData_298.js></script>
+<script src=USAData_299.js></script>
 
 <script>
 
