--- a/covid19reg.html
+++ b/covid19reg.html
@@ -329,6 +329,7 @@
 <script src=RegData_296.js></script>
 <script src=RegData_297.js></script>
 <script src=RegData_298.js></script>
+<script src=RegData_299.js></script>
 
 <script>
 
