--- a/covid19state.html
+++ b/covid19state.html
@@ -272,6 +272,7 @@
 <script src=USAData_296.js></script>
 <script src=USAData_297.js></script>
 <script src=USAData_298.js></script>
+<script src=USAData_299.js></script>
 
 <script>
 
