Updated data to 01/17/2021

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -330,6 +330,7 @@
 <script src=RegData_297.js></script>
 <script src=RegData_298.js></script>
 <script src=RegData_299.js></script>
+<script src=RegData_300.js></script>
 
 <script>
 
