--- a/covid19state.html
+++ b/covid19state.html
@@ -273,6 +273,7 @@
 <script src=USAData_297.js></script>
 <script src=USAData_298.js></script>
 <script src=USAData_299.js></script>
+<script src=USAData_300.js></script>
 
 <script>
 
