--- a/covid19int.html
+++ b/covid19int.html
@@ -330,6 +330,7 @@
 <script src=IntData_297.js></script>
 <script src=IntData_298.js></script>
 <script src=IntData_299.js></script>
+<script src=IntData_300.js></script>
 
 <script>
 
