Updated data to 01/08/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -331,6 +331,7 @@
 <script src=IntData_298.js></script>
 <script src=IntData_299.js></script>
 <script src=IntData_300.js></script>
+<script src=IntData_301.js></script>
 
 <script>
 
