--- a/covid19reg.html
+++ b/covid19reg.html
@@ -331,6 +331,7 @@
 <script src=RegData_298.js></script>
 <script src=RegData_299.js></script>
 <script src=RegData_300.js></script>
+<script src=RegData_301.js></script>
 
 <script>
 
