--- a/covid19state.html
+++ b/covid19state.html
@@ -274,6 +274,7 @@
 <script src=USAData_298.js></script>
 <script src=USAData_299.js></script>
 <script src=USAData_300.js></script>
+<script src=USAData_301.js></script>
 
 <script>
 
