--- a/covid19usa.html
+++ b/covid19usa.html
@@ -299,6 +299,7 @@
 <script src=USAData_298.js></script>
 <script src=USAData_299.js></script>
 <script src=USAData_300.js></script>
+<script src=USAData_301.js></script>
 
 <script>
 
