Updated data to 01/19/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -332,6 +332,7 @@
 <script src=IntData_299.js></script>
 <script src=IntData_300.js></script>
 <script src=IntData_301.js></script>
+<script src=IntData_302.js></script>
 
 <script>
 
