--- a/covid19usa.html
+++ b/covid19usa.html
@@ -300,6 +300,7 @@
 <script src=USAData_299.js></script>
 <script src=USAData_300.js></script>
 <script src=USAData_301.js></script>
+<script src=USAData_302.js></script>
 
 <script>
 
