--- a/covid19reg.html
+++ b/covid19reg.html
@@ -332,6 +332,7 @@
 <script src=RegData_299.js></script>
 <script src=RegData_300.js></script>
 <script src=RegData_301.js></script>
+<script src=RegData_302.js></script>
 
 <script>
 
