Updated data to 01/20/2021

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -333,6 +333,7 @@
 <script src=RegData_300.js></script>
 <script src=RegData_301.js></script>
 <script src=RegData_302.js></script>
+<script src=RegData_303.js></script>
 
 <script>
 
