--- a/covid19state.html
+++ b/covid19state.html
@@ -276,6 +276,7 @@
 <script src=USAData_300.js></script>
 <script src=USAData_301.js></script>
 <script src=USAData_302.js></script>
+<script src=USAData_303.js></script>
 
 <script>
 
