--- a/covid19int.html
+++ b/covid19int.html
@@ -333,6 +333,7 @@
 <script src=IntData_300.js></script>
 <script src=IntData_301.js></script>
 <script src=IntData_302.js></script>
+<script src=IntData_303.js></script>
 
 <script>
 
