Updated data to 01/22/2021 (two days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -334,6 +334,8 @@
 <script src=IntData_301.js></script>
 <script src=IntData_302.js></script>
 <script src=IntData_303.js></script>
+<script src=IntData_304.js></script>
+<script src=IntData_305.js></script>
 
 <script>
 
