--- a/covid19reg.html
+++ b/covid19reg.html
@@ -334,6 +334,8 @@
 <script src=RegData_301.js></script>
 <script src=RegData_302.js></script>
 <script src=RegData_303.js></script>
+<script src=RegData_304.js></script>
+<script src=RegData_305.js></script>
 
 <script>
 
