--- a/covid19state.html
+++ b/covid19state.html
@@ -277,6 +277,8 @@
 <script src=USAData_301.js></script>
 <script src=USAData_302.js></script>
 <script src=USAData_303.js></script>
+<script src=USAData_304.js></script>
+<script src=USAData_305.js></script>
 
 <script>
 
