--- a/covid19usa.html
+++ b/covid19usa.html
@@ -302,6 +302,8 @@
 <script src=USAData_301.js></script>
 <script src=USAData_302.js></script>
 <script src=USAData_303.js></script>
+<script src=USAData_304.js></script>
+<script src=USAData_305.js></script>
 
 <script>
 
