Updated date to 01/23/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -336,6 +336,7 @@
 <script src=IntData_303.js></script>
 <script src=IntData_304.js></script>
 <script src=IntData_305.js></script>
+<script src=IntData_306.js></script>
 
 <script>
 
