--- a/covid19reg.html
+++ b/covid19reg.html
@@ -336,6 +336,7 @@
 <script src=RegData_303.js></script>
 <script src=RegData_304.js></script>
 <script src=RegData_305.js></script>
+<script src=RegData_306.js></script>
 
 <script>
 
