--- a/covid19usa.html
+++ b/covid19usa.html
@@ -304,6 +304,7 @@
 <script src=USAData_303.js></script>
 <script src=USAData_304.js></script>
 <script src=USAData_305.js></script>
+<script src=USAData_306.js></script>
 
 <script>
 
