Updated data to 01/24/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -337,6 +337,7 @@
 <script src=IntData_304.js></script>
 <script src=IntData_305.js></script>
 <script src=IntData_306.js></script>
+<script src=IntData_307.js></script>
 
 <script>
 
