--- a/covid19reg.html
+++ b/covid19reg.html
@@ -337,6 +337,7 @@
 <script src=RegData_304.js></script>
 <script src=RegData_305.js></script>
 <script src=RegData_306.js></script>
+<script src=RegData_307.js></script>
 
 <script>
 
