--- a/covid19usa.html
+++ b/covid19usa.html
@@ -305,6 +305,7 @@
 <script src=USAData_304.js></script>
 <script src=USAData_305.js></script>
 <script src=USAData_306.js></script>
+<script src=USAData_307.js></script>
 
 <script>
 
