Updated data to 01/25/2021

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -338,6 +338,7 @@
 <script src=RegData_305.js></script>
 <script src=RegData_306.js></script>
 <script src=RegData_307.js></script>
+<script src=RegData_308.js></script>
 
 <script>
 
