--- a/covid19state.html
+++ b/covid19state.html
@@ -281,6 +281,7 @@
 <script src=USAData_305.js></script>
 <script src=USAData_306.js></script>
 <script src=USAData_307.js></script>
+<script src=USAData_308.js></script>
 
 <script>
 
