--- a/covid19int.html
+++ b/covid19int.html
@@ -338,6 +338,7 @@
 <script src=IntData_305.js></script>
 <script src=IntData_306.js></script>
 <script src=IntData_307.js></script>
+<script src=IntData_308.js></script>
 
 <script>
 
