--- a/covid19int.html
+++ b/covid19int.html
@@ -339,6 +339,7 @@
 <script src=IntData_306.js></script>
 <script src=IntData_307.js></script>
 <script src=IntData_308.js></script>
+<script src=IntData_309.js></script>
 
 <script>
 
