--- a/covid19reg.html
+++ b/covid19reg.html
@@ -339,6 +339,7 @@
 <script src=RegData_306.js></script>
 <script src=RegData_307.js></script>
 <script src=RegData_308.js></script>
+<script src=RegData_309.js></script>
 
 <script>
 
