--- a/covid19usa.html
+++ b/covid19usa.html
@@ -307,6 +307,7 @@
 <script src=USAData_306.js></script>
 <script src=USAData_307.js></script>
 <script src=USAData_308.js></script>
+<script src=USAData_309.js></script>
 
 <script>
 
