Updated date to 01/27/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -340,6 +340,7 @@
 <script src=IntData_307.js></script>
 <script src=IntData_308.js></script>
 <script src=IntData_309.js></script>
+<script src=IntData_310.js></script>
 
 <script>
 
