--- a/covid19reg.html
+++ b/covid19reg.html
@@ -340,6 +340,7 @@
 <script src=RegData_307.js></script>
 <script src=RegData_308.js></script>
 <script src=RegData_309.js></script>
+<script src=RegData_310.js></script>
 
 <script>
 
