--- a/covid19usa.html
+++ b/covid19usa.html
@@ -308,6 +308,7 @@
 <script src=USAData_307.js></script>
 <script src=USAData_308.js></script>
 <script src=USAData_309.js></script>
+<script src=USAData_310.js></script>
 
 <script>
 
