Updated data to 01/28/2021

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -341,6 +341,7 @@
 <script src=RegData_308.js></script>
 <script src=RegData_309.js></script>
 <script src=RegData_310.js></script>
+<script src=RegData_311.js></script>
 
 <script>
 
