--- a/covid19int.html
+++ b/covid19int.html
@@ -341,6 +341,7 @@
 <script src=IntData_308.js></script>
 <script src=IntData_309.js></script>
 <script src=IntData_310.js></script>
+<script src=IntData_311.js></script>
 
 <script>
 
