--- a/covid19state.html
+++ b/covid19state.html
@@ -284,6 +284,7 @@
 <script src=USAData_308.js></script>
 <script src=USAData_309.js></script>
 <script src=USAData_310.js></script>
+<script src=USAData_311.js></script>
 
 <script>
 
