--- a/covid19usa.html
+++ b/covid19usa.html
@@ -309,6 +309,7 @@
 <script src=USAData_308.js></script>
 <script src=USAData_309.js></script>
 <script src=USAData_310.js></script>
+<script src=USAData_311.js></script>
 
 <script>
 
