--- a/covid19int.html
+++ b/covid19int.html
@@ -342,6 +342,7 @@
 <script src=IntData_309.js></script>
 <script src=IntData_310.js></script>
 <script src=IntData_311.js></script>
+<script src=IntData_312.js></script>
 
 <script>
 
