--- a/covid19reg.html
+++ b/covid19reg.html
@@ -342,6 +342,7 @@
 <script src=RegData_309.js></script>
 <script src=RegData_310.js></script>
 <script src=RegData_311.js></script>
+<script src=RegData_312.js></script>
 
 <script>
 
