--- a/covid19state.html
+++ b/covid19state.html
@@ -285,6 +285,7 @@
 <script src=USAData_309.js></script>
 <script src=USAData_310.js></script>
 <script src=USAData_311.js></script>
+<script src=USAData_312.js></script>
 
 <script>
 
