Updated data to 01/30/2021

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -343,6 +343,7 @@
 <script src=RegData_310.js></script>
 <script src=RegData_311.js></script>
 <script src=RegData_312.js></script>
+<script src=RegData_313.js></script>
 
 <script>
 
