--- a/covid19usa.html
+++ b/covid19usa.html
@@ -311,6 +311,7 @@
 <script src=USAData_310.js></script>
 <script src=USAData_311.js></script>
 <script src=USAData_312.js></script>
+<script src=USAData_313.js></script>
 
 <script>
 
