--- a/covid19int.html
+++ b/covid19int.html
@@ -343,6 +343,7 @@
 <script src=IntData_310.js></script>
 <script src=IntData_311.js></script>
 <script src=IntData_312.js></script>
+<script src=IntData_313.js></script>
 
 <script>
 
