--- a/covid19state.html
+++ b/covid19state.html
@@ -286,6 +286,7 @@
 <script src=USAData_310.js></script>
 <script src=USAData_311.js></script>
 <script src=USAData_312.js></script>
+<script src=USAData_313.js></script>
 
 <script>
 
