Updated data to 01/31/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -344,6 +344,7 @@
 <script src=IntData_311.js></script>
 <script src=IntData_312.js></script>
 <script src=IntData_313.js></script>
+<script src=IntData_314.js></script>
 
 <script>
 
