--- a/covid19reg.html
+++ b/covid19reg.html
@@ -344,6 +344,7 @@
 <script src=RegData_311.js></script>
 <script src=RegData_312.js></script>
 <script src=RegData_313.js></script>
+<script src=RegData_314.js></script>
 
 <script>
 
