--- a/covid19state.html
+++ b/covid19state.html
@@ -287,6 +287,7 @@
 <script src=USAData_311.js></script>
 <script src=USAData_312.js></script>
 <script src=USAData_313.js></script>
+<script src=USAData_314.js></script>
 
 <script>
 
