--- a/covid19usa.html
+++ b/covid19usa.html
@@ -312,6 +312,7 @@
 <script src=USAData_311.js></script>
 <script src=USAData_312.js></script>
 <script src=USAData_313.js></script>
+<script src=USAData_314.js></script>
 
 <script>
 
