Updated data to 02/01/2021

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -345,6 +345,7 @@
 <script src=RegData_312.js></script>
 <script src=RegData_313.js></script>
 <script src=RegData_314.js></script>
+<script src=RegData_315.js></script>
 
 <script>
 
