--- a/covid19state.html
+++ b/covid19state.html
@@ -288,6 +288,7 @@
 <script src=USAData_312.js></script>
 <script src=USAData_313.js></script>
 <script src=USAData_314.js></script>
+<script src=USAData_315.js></script>
 
 <script>
 
