--- a/covid19int.html
+++ b/covid19int.html
@@ -345,6 +345,7 @@
 <script src=IntData_312.js></script>
 <script src=IntData_313.js></script>
 <script src=IntData_314.js></script>
+<script src=IntData_315.js></script>
 
 <script>
 
