Updated data to 02/02/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -346,6 +346,7 @@
 <script src=IntData_313.js></script>
 <script src=IntData_314.js></script>
 <script src=IntData_315.js></script>
+<script src=IntData_316.js></script>
 
 <script>
 
