--- a/covid19reg.html
+++ b/covid19reg.html
@@ -346,6 +346,7 @@
 <script src=RegData_313.js></script>
 <script src=RegData_314.js></script>
 <script src=RegData_315.js></script>
+<script src=RegData_316.js></script>
 
 <script>
 
