--- a/covid19usa.html
+++ b/covid19usa.html
@@ -314,6 +314,7 @@
 <script src=USAData_313.js></script>
 <script src=USAData_314.js></script>
 <script src=USAData_315.js></script>
+<script src=USAData_316.js></script>
 
 <script>
 
