Updated data to 02/03/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -347,6 +347,7 @@
 <script src=IntData_314.js></script>
 <script src=IntData_315.js></script>
 <script src=IntData_316.js></script>
+<script src=IntData_317.js></script>
 
 <script>
 
