--- a/covid19usa.html
+++ b/covid19usa.html
@@ -315,6 +315,7 @@
 <script src=USAData_314.js></script>
 <script src=USAData_315.js></script>
 <script src=USAData_316.js></script>
+<script src=USAData_317.js></script>
 
 <script>
 
