--- a/covid19reg.html
+++ b/covid19reg.html
@@ -347,6 +347,7 @@
 <script src=RegData_314.js></script>
 <script src=RegData_315.js></script>
 <script src=RegData_316.js></script>
+<script src=RegData_317.js></script>
 
 <script>
 
