--- a/covid19state.html
+++ b/covid19state.html
@@ -290,6 +290,7 @@
 <script src=USAData_314.js></script>
 <script src=USAData_315.js></script>
 <script src=USAData_316.js></script>
+<script src=USAData_317.js></script>
 
 <script>
 
