Updated data to 02/04/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -348,6 +348,7 @@
 <script src=IntData_315.js></script>
 <script src=IntData_316.js></script>
 <script src=IntData_317.js></script>
+<script src=IntData_318.js></script>
 
 <script>
 
