--- a/covid19state.html
+++ b/covid19state.html
@@ -291,6 +291,7 @@
 <script src=USAData_315.js></script>
 <script src=USAData_316.js></script>
 <script src=USAData_317.js></script>
+<script src=USAData_318.js></script>
 
 <script>
 
