--- a/covid19reg.html
+++ b/covid19reg.html
@@ -348,6 +348,7 @@
 <script src=RegData_315.js></script>
 <script src=RegData_316.js></script>
 <script src=RegData_317.js></script>
+<script src=RegData_318.js></script>
 
 <script>
 
