--- a/covid19usa.html
+++ b/covid19usa.html
@@ -316,6 +316,7 @@
 <script src=USAData_315.js></script>
 <script src=USAData_316.js></script>
 <script src=USAData_317.js></script>
+<script src=USAData_318.js></script>
 
 <script>
 
