Updated data to 02/05/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -349,6 +349,7 @@
 <script src=IntData_316.js></script>
 <script src=IntData_317.js></script>
 <script src=IntData_318.js></script>
+<script src=IntData_319.js></script>
 
 <script>
 
