--- a/covid19reg.html
+++ b/covid19reg.html
@@ -349,6 +349,7 @@
 <script src=RegData_316.js></script>
 <script src=RegData_317.js></script>
 <script src=RegData_318.js></script>
+<script src=RegData_319.js></script>
 
 <script>
 
