--- a/covid19state.html
+++ b/covid19state.html
@@ -292,6 +292,7 @@
 <script src=USAData_316.js></script>
 <script src=USAData_317.js></script>
 <script src=USAData_318.js></script>
+<script src=USAData_319.js></script>
 
 <script>
 
