Updated data to 02/07/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -351,6 +351,7 @@
 <script src=IntData_318.js></script>
 <script src=IntData_319.js></script>
 <script src=IntData_320.js></script>
+<script src=IntData_321.js></script>
 
 <script>
 
