--- a/covid19reg.html
+++ b/covid19reg.html
@@ -351,6 +351,7 @@
 <script src=RegData_318.js></script>
 <script src=RegData_319.js></script>
 <script src=RegData_320.js></script>
+<script src=RegData_321.js></script>
 
 <script>
 
