--- a/covid19state.html
+++ b/covid19state.html
@@ -294,6 +294,7 @@
 <script src=USAData_318.js></script>
 <script src=USAData_319.js></script>
 <script src=USAData_320.js></script>
+<script src=USAData_321.js></script>
 
 <script>
 
