--- a/covid19usa.html
+++ b/covid19usa.html
@@ -319,6 +319,7 @@
 <script src=USAData_318.js></script>
 <script src=USAData_319.js></script>
 <script src=USAData_320.js></script>
+<script src=USAData_321.js></script>
 
 <script>
 
