Updated data to 02/08/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -352,6 +352,7 @@
 <script src=IntData_319.js></script>
 <script src=IntData_320.js></script>
 <script src=IntData_321.js></script>
+<script src=IntData_322.js></script>
 
 <script>
 
