--- a/covid19reg.html
+++ b/covid19reg.html
@@ -352,6 +352,7 @@
 <script src=RegData_319.js></script>
 <script src=RegData_320.js></script>
 <script src=RegData_321.js></script>
+<script src=RegData_322.js></script>
 
 <script>
 
