--- a/covid19state.html
+++ b/covid19state.html
@@ -295,6 +295,7 @@
 <script src=USAData_319.js></script>
 <script src=USAData_320.js></script>
 <script src=USAData_321.js></script>
+<script src=USAData_322.js></script>
 
 <script>
 
