--- a/covid19usa.html
+++ b/covid19usa.html
@@ -320,6 +320,7 @@
 <script src=USAData_319.js></script>
 <script src=USAData_320.js></script>
 <script src=USAData_321.js></script>
+<script src=USAData_322.js></script>
 
 <script>
 
