--- a/covid19reg.html
+++ b/covid19reg.html
@@ -353,6 +353,7 @@
 <script src=RegData_320.js></script>
 <script src=RegData_321.js></script>
 <script src=RegData_322.js></script>
+<script src=RegData_323.js></script>
 
 <script>
 
