--- a/covid19state.html
+++ b/covid19state.html
@@ -296,6 +296,7 @@
 <script src=USAData_320.js></script>
 <script src=USAData_321.js></script>
 <script src=USAData_322.js></script>
+<script src=USAData_323.js></script>
 
 <script>
 
