Updated data to 02/10/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -354,6 +354,7 @@
 <script src=IntData_321.js></script>
 <script src=IntData_322.js></script>
 <script src=IntData_323.js></script>
+<script src=IntData_324.js></script>
 
 <script>
 
