--- a/covid19reg.html
+++ b/covid19reg.html
@@ -354,6 +354,7 @@
 <script src=RegData_321.js></script>
 <script src=RegData_322.js></script>
 <script src=RegData_323.js></script>
+<script src=RegData_324.js></script>
 
 <script>
 
