--- a/covid19state.html
+++ b/covid19state.html
@@ -297,6 +297,7 @@
 <script src=USAData_321.js></script>
 <script src=USAData_322.js></script>
 <script src=USAData_323.js></script>
+<script src=USAData_324.js></script>
 
 <script>
 
