--- a/covid19usa.html
+++ b/covid19usa.html
@@ -322,6 +322,7 @@
 <script src=USAData_321.js></script>
 <script src=USAData_322.js></script>
 <script src=USAData_323.js></script>
+<script src=USAData_324.js></script>
 
 <script>
 
