--- a/covid19reg.html
+++ b/covid19reg.html
@@ -355,6 +355,7 @@
 <script src=RegData_322.js></script>
 <script src=RegData_323.js></script>
 <script src=RegData_324.js></script>
+<script src=RegData_325.js></script>
 
 <script>
 
