--- a/covid19state.html
+++ b/covid19state.html
@@ -298,6 +298,7 @@
 <script src=USAData_322.js></script>
 <script src=USAData_323.js></script>
 <script src=USAData_324.js></script>
+<script src=USAData_325.js></script>
 
 <script>
 
