--- a/covid19usa.html
+++ b/covid19usa.html
@@ -323,6 +323,7 @@
 <script src=USAData_322.js></script>
 <script src=USAData_323.js></script>
 <script src=USAData_324.js></script>
+<script src=USAData_325.js></script>
 
 <script>
 
