Updated data to 02/12/2021

--- a/covid19state.html
+++ b/covid19state.html
@@ -299,6 +299,7 @@
 <script src=USAData_323.js></script>
 <script src=USAData_324.js></script>
 <script src=USAData_325.js></script>
+<script src=USAData_326.js></script>
 
 <script>
 
