--- a/covid19int.html
+++ b/covid19int.html
@@ -356,6 +356,7 @@
 <script src=IntData_323.js></script>
 <script src=IntData_324.js></script>
 <script src=IntData_325.js></script>
+<script src=IntData_326.js></script>
 
 <script>
 
