--- a/covid19reg.html
+++ b/covid19reg.html
@@ -356,6 +356,7 @@
 <script src=RegData_323.js></script>
 <script src=RegData_324.js></script>
 <script src=RegData_325.js></script>
+<script src=RegData_326.js></script>
 
 <script>
 
