Updated data to 02/13/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -357,6 +357,7 @@
 <script src=IntData_324.js></script>
 <script src=IntData_325.js></script>
 <script src=IntData_326.js></script>
+<script src=IntData_327.js></script>
 
 <script>
 
