--- a/covid19reg.html
+++ b/covid19reg.html
@@ -357,6 +357,7 @@
 <script src=RegData_324.js></script>
 <script src=RegData_325.js></script>
 <script src=RegData_326.js></script>
+<script src=RegData_327.js></script>
 
 <script>
 
