--- a/covid19usa.html
+++ b/covid19usa.html
@@ -325,6 +325,7 @@
 <script src=USAData_324.js></script>
 <script src=USAData_325.js></script>
 <script src=USAData_326.js></script>
+<script src=USAData_327.js></script>
 
 <script>
 
