--- a/covid19state.html
+++ b/covid19state.html
@@ -300,6 +300,7 @@
 <script src=USAData_324.js></script>
 <script src=USAData_325.js></script>
 <script src=USAData_326.js></script>
+<script src=USAData_327.js></script>
 
 <script>
 
