--- a/covid19reg.html
+++ b/covid19reg.html
@@ -358,6 +358,8 @@
 <script src=RegData_325.js></script>
 <script src=RegData_326.js></script>
 <script src=RegData_327.js></script>
+<script src=RegData_328.js></script>
+<script src=RegData_329.js></script>
 
 <script>
 
