--- a/covid19state.html
+++ b/covid19state.html
@@ -301,6 +301,8 @@
 <script src=USAData_325.js></script>
 <script src=USAData_326.js></script>
 <script src=USAData_327.js></script>
+<script src=USAData_328.js></script>
+<script src=USAData_329.js></script>
 
 <script>
 
