--- a/covid19usa.html
+++ b/covid19usa.html
@@ -326,6 +326,8 @@
 <script src=USAData_325.js></script>
 <script src=USAData_326.js></script>
 <script src=USAData_327.js></script>
+<script src=USAData_328.js></script>
+<script src=USAData_329.js></script>
 
 <script>
 
