Updated data to 02/17/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -360,6 +360,7 @@
 <script src=IntData_327.js></script>
 <script src=IntData_328.js></script>
 <script src=IntData_329.js></script>
+<script src=IntData_330.js></script>
 
 <script>
 
