--- a/covid19reg.html
+++ b/covid19reg.html
@@ -360,6 +360,7 @@
 <script src=RegData_327.js></script>
 <script src=RegData_328.js></script>
 <script src=RegData_329.js></script>
+<script src=RegData_330.js></script>
 
 <script>
 
