--- a/covid19state.html
+++ b/covid19state.html
@@ -303,6 +303,7 @@
 <script src=USAData_327.js></script>
 <script src=USAData_328.js></script>
 <script src=USAData_329.js></script>
+<script src=USAData_330.js></script>
 
 <script>
 
