Updated data to 02/19/2021 (two dates)

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -361,6 +361,8 @@
 <script src=RegData_328.js></script>
 <script src=RegData_329.js></script>
 <script src=RegData_330.js></script>
+<script src=RegData_331.js></script>
+<script src=RegData_332.js></script>
 
 <script>
 
