--- a/covid19int.html
+++ b/covid19int.html
@@ -361,6 +361,8 @@
 <script src=IntData_328.js></script>
 <script src=IntData_329.js></script>
 <script src=IntData_330.js></script>
+<script src=IntData_331.js></script>
+<script src=IntData_332.js></script>
 
 <script>
 
