--- a/covid19state.html
+++ b/covid19state.html
@@ -304,6 +304,8 @@
 <script src=USAData_328.js></script>
 <script src=USAData_329.js></script>
 <script src=USAData_330.js></script>
+<script src=USAData_331.js></script>
+<script src=USAData_332.js></script>
 
 <script>
 
