--- a/covid19int.html
+++ b/covid19int.html
@@ -363,6 +363,7 @@
 <script src=IntData_330.js></script>
 <script src=IntData_331.js></script>
 <script src=IntData_332.js></script>
+<script src=IntData_333.js></script>
 
 <script>
 
