--- a/covid19state.html
+++ b/covid19state.html
@@ -306,6 +306,7 @@
 <script src=USAData_330.js></script>
 <script src=USAData_331.js></script>
 <script src=USAData_332.js></script>
+<script src=USAData_333.js></script>
 
 <script>
 
