--- a/covid19reg.html
+++ b/covid19reg.html
@@ -363,6 +363,7 @@
 <script src=RegData_330.js></script>
 <script src=RegData_331.js></script>
 <script src=RegData_332.js></script>
+<script src=RegData_333.js></script>
 
 <script>
 
