Updated data to 02/21/2021

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -364,6 +364,7 @@
 <script src=RegData_331.js></script>
 <script src=RegData_332.js></script>
 <script src=RegData_333.js></script>
+<script src=RegData_334.js></script>
 
 <script>
 
