--- a/covid19int.html
+++ b/covid19int.html
@@ -364,6 +364,7 @@
 <script src=IntData_331.js></script>
 <script src=IntData_332.js></script>
 <script src=IntData_333.js></script>
+<script src=IntData_334.js></script>
 
 <script>
 
