--- a/covid19state.html
+++ b/covid19state.html
@@ -307,6 +307,7 @@
 <script src=USAData_331.js></script>
 <script src=USAData_332.js></script>
 <script src=USAData_333.js></script>
+<script src=USAData_334.js></script>
 
 <script>
 
