Updated data to 02/22/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -365,6 +365,7 @@
 <script src=IntData_332.js></script>
 <script src=IntData_333.js></script>
 <script src=IntData_334.js></script>
+<script src=IntData_335.js></script>
 
 <script>
 
