--- a/covid19reg.html
+++ b/covid19reg.html
@@ -365,6 +365,7 @@
 <script src=RegData_332.js></script>
 <script src=RegData_333.js></script>
 <script src=RegData_334.js></script>
+<script src=RegData_335.js></script>
 
 <script>
 
