--- a/covid19usa.html
+++ b/covid19usa.html
@@ -333,6 +333,7 @@
 <script src=USAData_332.js></script>
 <script src=USAData_333.js></script>
 <script src=USAData_334.js></script>
+<script src=USAData_335.js></script>
 
 <script>
 
