Updated data to 02/23/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -366,6 +366,7 @@
 <script src=IntData_333.js></script>
 <script src=IntData_334.js></script>
 <script src=IntData_335.js></script>
+<script src=IntData_336.js></script>
 
 <script>
 
