--- a/covid19reg.html
+++ b/covid19reg.html
@@ -366,6 +366,7 @@
 <script src=RegData_333.js></script>
 <script src=RegData_334.js></script>
 <script src=RegData_335.js></script>
+<script src=RegData_336.js></script>
 
 <script>
 
