--- a/covid19usa.html
+++ b/covid19usa.html
@@ -334,6 +334,7 @@
 <script src=USAData_333.js></script>
 <script src=USAData_334.js></script>
 <script src=USAData_335.js></script>
+<script src=USAData_336.js></script>
 
 <script>
 
