--- a/covid19state.html
+++ b/covid19state.html
@@ -309,6 +309,7 @@
 <script src=USAData_333.js></script>
 <script src=USAData_334.js></script>
 <script src=USAData_335.js></script>
+<script src=USAData_336.js></script>
 
 <script>
 
