Updated data to 02/24/2021

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -367,6 +367,7 @@
 <script src=RegData_334.js></script>
 <script src=RegData_335.js></script>
 <script src=RegData_336.js></script>
+<script src=RegData_337.js></script>
 
 <script>
 
