--- a/covid19usa.html
+++ b/covid19usa.html
@@ -335,6 +335,7 @@
 <script src=USAData_334.js></script>
 <script src=USAData_335.js></script>
 <script src=USAData_336.js></script>
+<script src=USAData_337.js></script>
 
 <script>
 
