--- a/covid19int.html
+++ b/covid19int.html
@@ -367,6 +367,7 @@
 <script src=IntData_334.js></script>
 <script src=IntData_335.js></script>
 <script src=IntData_336.js></script>
+<script src=IntData_337.js></script>
 
 <script>
 
