--- a/covid19state.html
+++ b/covid19state.html
@@ -310,6 +310,7 @@
 <script src=USAData_334.js></script>
 <script src=USAData_335.js></script>
 <script src=USAData_336.js></script>
+<script src=USAData_337.js></script>
 
 <script>
 
