Updated data to 02/25/2021

--- a/covid19state.html
+++ b/covid19state.html
@@ -311,6 +311,7 @@
 <script src=USAData_335.js></script>
 <script src=USAData_336.js></script>
 <script src=USAData_337.js></script>
+<script src=USAData_338.js></script>
 
 <script>
 
