--- a/covid19int.html
+++ b/covid19int.html
@@ -368,6 +368,7 @@
 <script src=IntData_335.js></script>
 <script src=IntData_336.js></script>
 <script src=IntData_337.js></script>
+<script src=IntData_338.js></script>
 
 <script>
 
