--- a/covid19reg.html
+++ b/covid19reg.html
@@ -368,6 +368,7 @@
 <script src=RegData_335.js></script>
 <script src=RegData_336.js></script>
 <script src=RegData_337.js></script>
+<script src=RegData_338.js></script>
 
 <script>
 
