Updated data to 02/28/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -369,6 +369,9 @@
 <script src=IntData_336.js></script>
 <script src=IntData_337.js></script>
 <script src=IntData_338.js></script>
+<script src=IntData_339.js></script>
+<script src=IntData_340.js></script>
+<script src=IntData_341.js></script>
 
 <script>
 
