--- a/covid19reg.html
+++ b/covid19reg.html
@@ -369,6 +369,9 @@
 <script src=RegData_336.js></script>
 <script src=RegData_337.js></script>
 <script src=RegData_338.js></script>
+<script src=RegData_339.js></script>
+<script src=RegData_340.js></script>
+<script src=RegData_341.js></script>
 
 <script>
 
