--- a/covid19usa.html
+++ b/covid19usa.html
@@ -337,6 +337,9 @@
 <script src=USAData_336.js></script>
 <script src=USAData_337.js></script>
 <script src=USAData_338.js></script>
+<script src=USAData_339.js></script>
+<script src=USAData_340.js></script>
+<script src=USAData_341.js></script>
 
 <script>
 
