Updated data to 03/01/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -372,6 +372,7 @@
 <script src=IntData_339.js></script>
 <script src=IntData_340.js></script>
 <script src=IntData_341.js></script>
+<script src=IntData_342.js></script>
 
 <script>
 
