--- a/covid19reg.html
+++ b/covid19reg.html
@@ -372,6 +372,7 @@
 <script src=RegData_339.js></script>
 <script src=RegData_340.js></script>
 <script src=RegData_341.js></script>
+<script src=RegData_342.js></script>
 
 <script>
 
