--- a/covid19state.html
+++ b/covid19state.html
@@ -315,6 +315,7 @@
 <script src=USAData_339.js></script>
 <script src=USAData_340.js></script>
 <script src=USAData_341.js></script>
+<script src=USAData_342.js></script>
 
 <script>
 
