Updated data to 03/02/2021

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -373,6 +373,7 @@
 <script src=RegData_340.js></script>
 <script src=RegData_341.js></script>
 <script src=RegData_342.js></script>
+<script src=RegData_343.js></script>
 
 <script>
 
