--- a/covid19usa.html
+++ b/covid19usa.html
@@ -341,6 +341,7 @@
 <script src=USAData_340.js></script>
 <script src=USAData_341.js></script>
 <script src=USAData_342.js></script>
+<script src=USAData_343.js></script>
 
 <script>
 
