--- a/covid19int.html
+++ b/covid19int.html
@@ -373,6 +373,7 @@
 <script src=IntData_340.js></script>
 <script src=IntData_341.js></script>
 <script src=IntData_342.js></script>
+<script src=IntData_343.js></script>
 
 <script>
 
