Updated data to 03/04/2021 (two days data)

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -374,6 +374,8 @@
 <script src=RegData_341.js></script>
 <script src=RegData_342.js></script>
 <script src=RegData_343.js></script>
+<script src=RegData_344.js></script>
+<script src=RegData_345.js></script>
 
 <script>
 
