--- a/covid19state.html
+++ b/covid19state.html
@@ -317,6 +317,8 @@
 <script src=USAData_341.js></script>
 <script src=USAData_342.js></script>
 <script src=USAData_343.js></script>
+<script src=USAData_344.js></script>
+<script src=USAData_345.js></script>
 
 <script>
 
