--- a/covid19int.html
+++ b/covid19int.html
@@ -374,6 +374,8 @@
 <script src=IntData_341.js></script>
 <script src=IntData_342.js></script>
 <script src=IntData_343.js></script>
+<script src=IntData_344.js></script>
+<script src=IntData_345.js></script>
 
 <script>
 
