Updated data to 03/05/2021

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -344,6 +344,7 @@
 <script src=USAData_343.js></script>
 <script src=USAData_344.js></script>
 <script src=USAData_345.js></script>
+<script src=USAData_346.js></script>
 
 <script>
 
