--- a/covid19int.html
+++ b/covid19int.html
@@ -376,6 +376,7 @@
 <script src=IntData_343.js></script>
 <script src=IntData_344.js></script>
 <script src=IntData_345.js></script>
+<script src=IntData_346.js></script>
 
 <script>
 
