--- a/covid19reg.html
+++ b/covid19reg.html
@@ -376,6 +376,7 @@
 <script src=RegData_343.js></script>
 <script src=RegData_344.js></script>
 <script src=RegData_345.js></script>
+<script src=RegData_346.js></script>
 
 <script>
 
