Updated data to 03/06/2021

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -377,6 +377,7 @@
 <script src=RegData_344.js></script>
 <script src=RegData_345.js></script>
 <script src=RegData_346.js></script>
+<script src=RegData_347.js></script>
 
 <script>
 
