--- a/covid19usa.html
+++ b/covid19usa.html
@@ -345,6 +345,7 @@
 <script src=USAData_344.js></script>
 <script src=USAData_345.js></script>
 <script src=USAData_346.js></script>
+<script src=USAData_347.js></script>
 
 <script>
 
