--- a/covid19int.html
+++ b/covid19int.html
@@ -377,6 +377,7 @@
 <script src=IntData_344.js></script>
 <script src=IntData_345.js></script>
 <script src=IntData_346.js></script>
+<script src=IntData_347.js></script>
 
 <script>
 
