Updated data to 03/07/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -378,6 +378,7 @@
 <script src=IntData_345.js></script>
 <script src=IntData_346.js></script>
 <script src=IntData_347.js></script>
+<script src=IntData_348.js></script>
 
 <script>
 
