--- a/covid19state.html
+++ b/covid19state.html
@@ -321,6 +321,7 @@
 <script src=USAData_345.js></script>
 <script src=USAData_346.js></script>
 <script src=USAData_347.js></script>
+<script src=USAData_348.js></script>
 
 <script>
 
