--- a/covid19reg.html
+++ b/covid19reg.html
@@ -378,6 +378,7 @@
 <script src=RegData_345.js></script>
 <script src=RegData_346.js></script>
 <script src=RegData_347.js></script>
+<script src=RegData_348.js></script>
 
 <script>
 
