Updated data to 03/10/2021 (three days)

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -347,6 +347,9 @@
 <script src=USAData_346.js></script>
 <script src=USAData_347.js></script>
 <script src=USAData_348.js></script>
+<script src=USAData_349.js></script>
+<script src=USAData_350.js></script>
+<script src=USAData_351.js></script>
 
 <script>
 
