--- a/covid19int.html
+++ b/covid19int.html
@@ -379,6 +379,9 @@
 <script src=IntData_346.js></script>
 <script src=IntData_347.js></script>
 <script src=IntData_348.js></script>
+<script src=IntData_349.js></script>
+<script src=IntData_350.js></script>
+<script src=IntData_351.js></script>
 
 <script>
 
