--- a/covid19reg.html
+++ b/covid19reg.html
@@ -379,6 +379,9 @@
 <script src=RegData_346.js></script>
 <script src=RegData_347.js></script>
 <script src=RegData_348.js></script>
+<script src=RegData_349.js></script>
+<script src=RegData_350.js></script>
+<script src=RegData_351.js></script>
 
 <script>
 
