Updated data to 03/11/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -382,6 +382,7 @@
 <script src=IntData_349.js></script>
 <script src=IntData_350.js></script>
 <script src=IntData_351.js></script>
+<script src=IntData_352.js></script>
 
 <script>
 
