--- a/covid19reg.html
+++ b/covid19reg.html
@@ -382,6 +382,7 @@
 <script src=RegData_349.js></script>
 <script src=RegData_350.js></script>
 <script src=RegData_351.js></script>
+<script src=RegData_352.js></script>
 
 <script>
 
