--- a/covid19usa.html
+++ b/covid19usa.html
@@ -350,6 +350,7 @@
 <script src=USAData_349.js></script>
 <script src=USAData_350.js></script>
 <script src=USAData_351.js></script>
+<script src=USAData_352.js></script>
 
 <script>
 
