Updated data to 03/12/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -383,6 +383,7 @@
 <script src=IntData_350.js></script>
 <script src=IntData_351.js></script>
 <script src=IntData_352.js></script>
+<script src=IntData_353.js></script>
 
 <script>
 
