--- a/covid19reg.html
+++ b/covid19reg.html
@@ -383,6 +383,7 @@
 <script src=RegData_350.js></script>
 <script src=RegData_351.js></script>
 <script src=RegData_352.js></script>
+<script src=RegData_353.js></script>
 
 <script>
 
