--- a/covid19usa.html
+++ b/covid19usa.html
@@ -351,6 +351,7 @@
 <script src=USAData_350.js></script>
 <script src=USAData_351.js></script>
 <script src=USAData_352.js></script>
+<script src=USAData_353.js></script>
 
 <script>
 
