Updated data to 03/13/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -384,6 +384,7 @@
 <script src=IntData_351.js></script>
 <script src=IntData_352.js></script>
 <script src=IntData_353.js></script>
+<script src=IntData_354.js></script>
 
 <script>
 
