--- a/covid19reg.html
+++ b/covid19reg.html
@@ -384,6 +384,7 @@
 <script src=RegData_351.js></script>
 <script src=RegData_352.js></script>
 <script src=RegData_353.js></script>
+<script src=RegData_354.js></script>
 
 <script>
 
