--- a/covid19state.html
+++ b/covid19state.html
@@ -327,6 +327,7 @@
 <script src=USAData_351.js></script>
 <script src=USAData_352.js></script>
 <script src=USAData_353.js></script>
+<script src=USAData_354.js></script>
 
 <script>
 
