--- a/covid19usa.html
+++ b/covid19usa.html
@@ -352,6 +352,7 @@
 <script src=USAData_351.js></script>
 <script src=USAData_352.js></script>
 <script src=USAData_353.js></script>
+<script src=USAData_354.js></script>
 
 <script>
 
