--- a/covid19int.html
+++ b/covid19int.html
@@ -385,6 +385,7 @@
 <script src=IntData_352.js></script>
 <script src=IntData_353.js></script>
 <script src=IntData_354.js></script>
+<script src=IntData_355.js></script>
 
 <script>
 
