--- a/covid19reg.html
+++ b/covid19reg.html
@@ -385,6 +385,7 @@
 <script src=RegData_352.js></script>
 <script src=RegData_353.js></script>
 <script src=RegData_354.js></script>
+<script src=RegData_355.js></script>
 
 <script>
 
