--- a/covid19usa.html
+++ b/covid19usa.html
@@ -353,6 +353,7 @@
 <script src=USAData_352.js></script>
 <script src=USAData_353.js></script>
 <script src=USAData_354.js></script>
+<script src=USAData_355.js></script>
 
 <script>
 
