Updated data to 03/15/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -386,6 +386,7 @@
 <script src=IntData_353.js></script>
 <script src=IntData_354.js></script>
 <script src=IntData_355.js></script>
+<script src=IntData_356.js></script>
 
 <script>
 
