--- a/covid19reg.html
+++ b/covid19reg.html
@@ -386,6 +386,7 @@
 <script src=RegData_353.js></script>
 <script src=RegData_354.js></script>
 <script src=RegData_355.js></script>
+<script src=RegData_356.js></script>
 
 <script>
 
