--- a/covid19usa.html
+++ b/covid19usa.html
@@ -354,6 +354,7 @@
 <script src=USAData_353.js></script>
 <script src=USAData_354.js></script>
 <script src=USAData_355.js></script>
+<script src=USAData_356.js></script>
 
 <script>
 
