Updated data to 03/16/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -387,6 +387,7 @@
 <script src=IntData_354.js></script>
 <script src=IntData_355.js></script>
 <script src=IntData_356.js></script>
+<script src=IntData_357.js></script>
 
 <script>
 
