--- a/covid19state.html
+++ b/covid19state.html
@@ -330,6 +330,7 @@
 <script src=USAData_354.js></script>
 <script src=USAData_355.js></script>
 <script src=USAData_356.js></script>
+<script src=USAData_357.js></script>
 
 <script>
 
