--- a/covid19reg.html
+++ b/covid19reg.html
@@ -387,6 +387,7 @@
 <script src=RegData_354.js></script>
 <script src=RegData_355.js></script>
 <script src=RegData_356.js></script>
+<script src=RegData_357.js></script>
 
 <script>
 
