--- a/covid19usa.html
+++ b/covid19usa.html
@@ -355,6 +355,7 @@
 <script src=USAData_354.js></script>
 <script src=USAData_355.js></script>
 <script src=USAData_356.js></script>
+<script src=USAData_357.js></script>
 
 <script>
 
