Updated date to 03/18/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -389,6 +389,7 @@
 <script src=IntData_356.js></script>
 <script src=IntData_357.js></script>
 <script src=IntData_358.js></script>
+<script src=IntData_359.js></script>
 
 <script>
 
