--- a/covid19reg.html
+++ b/covid19reg.html
@@ -389,6 +389,7 @@
 <script src=RegData_356.js></script>
 <script src=RegData_357.js></script>
 <script src=RegData_358.js></script>
+<script src=RegData_359.js></script>
 
 <script>
 
