--- a/covid19state.html
+++ b/covid19state.html
@@ -332,6 +332,7 @@
 <script src=USAData_356.js></script>
 <script src=USAData_357.js></script>
 <script src=USAData_358.js></script>
+<script src=USAData_359.js></script>
 
 <script>
 
