--- a/covid19usa.html
+++ b/covid19usa.html
@@ -357,6 +357,7 @@
 <script src=USAData_356.js></script>
 <script src=USAData_357.js></script>
 <script src=USAData_358.js></script>
+<script src=USAData_359.js></script>
 
 <script>
 
