--- a/covid19int.html
+++ b/covid19int.html
@@ -390,6 +390,7 @@
 <script src=IntData_357.js></script>
 <script src=IntData_358.js></script>
 <script src=IntData_359.js></script>
+<script src=IntData_360.js></script>
 
 <script>
 
