--- a/covid19reg.html
+++ b/covid19reg.html
@@ -390,6 +390,7 @@
 <script src=RegData_357.js></script>
 <script src=RegData_358.js></script>
 <script src=RegData_359.js></script>
+<script src=RegData_360.js></script>
 
 <script>
 
