--- a/covid19state.html
+++ b/covid19state.html
@@ -333,6 +333,7 @@
 <script src=USAData_357.js></script>
 <script src=USAData_358.js></script>
 <script src=USAData_359.js></script>
+<script src=USAData_360.js></script>
 
 <script>
 
