--- a/covid19usa.html
+++ b/covid19usa.html
@@ -358,6 +358,7 @@
 <script src=USAData_357.js></script>
 <script src=USAData_358.js></script>
 <script src=USAData_359.js></script>
+<script src=USAData_360.js></script>
 
 <script>
 
