Updated data to 03/20/2021

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -391,6 +391,7 @@
 <script src=RegData_358.js></script>
 <script src=RegData_359.js></script>
 <script src=RegData_360.js></script>
+<script src=RegData_361.js></script>
 
 <script>
 
