--- a/covid19usa.html
+++ b/covid19usa.html
@@ -359,6 +359,7 @@
 <script src=USAData_358.js></script>
 <script src=USAData_359.js></script>
 <script src=USAData_360.js></script>
+<script src=USAData_361.js></script>
 
 <script>
 
