--- a/covid19state.html
+++ b/covid19state.html
@@ -335,6 +335,7 @@
 <script src=USAData_359.js></script>
 <script src=USAData_360.js></script>
 <script src=USAData_361.js></script>
+<script src=USAData_362.js></script>
 
 <script>
 
