--- a/covid19reg.html
+++ b/covid19reg.html
@@ -392,6 +392,7 @@
 <script src=RegData_359.js></script>
 <script src=RegData_360.js></script>
 <script src=RegData_361.js></script>
+<script src=RegData_362.js></script>
 
 <script>
 
