--- a/covid19reg.html
+++ b/covid19reg.html
@@ -393,6 +393,7 @@
 <script src=RegData_360.js></script>
 <script src=RegData_361.js></script>
 <script src=RegData_362.js></script>
+<script src=RegData_363.js></script>
 
 <script>
 
