--- a/covid19state.html
+++ b/covid19state.html
@@ -336,6 +336,7 @@
 <script src=USAData_360.js></script>
 <script src=USAData_361.js></script>
 <script src=USAData_362.js></script>
+<script src=USAData_363.js></script>
 
 <script>
 
