Updated data to 03/23/2021

--- a/covid19state.html
+++ b/covid19state.html
@@ -337,6 +337,7 @@
 <script src=USAData_361.js></script>
 <script src=USAData_362.js></script>
 <script src=USAData_363.js></script>
+<script src=USAData_364.js></script>
 
 <script>
 
