--- a/covid19int.html
+++ b/covid19int.html
@@ -394,6 +394,7 @@
 <script src=IntData_361.js></script>
 <script src=IntData_362.js></script>
 <script src=IntData_363.js></script>
+<script src=IntData_364.js></script>
 
 <script>
 
