--- a/covid19reg.html
+++ b/covid19reg.html
@@ -394,6 +394,7 @@
 <script src=RegData_361.js></script>
 <script src=RegData_362.js></script>
 <script src=RegData_363.js></script>
+<script src=RegData_364.js></script>
 
 <script>
 
