--- a/covid19reg.html
+++ b/covid19reg.html
@@ -395,6 +395,7 @@
 <script src=RegData_362.js></script>
 <script src=RegData_363.js></script>
 <script src=RegData_364.js></script>
+<script src=RegData_365.js></script>
 
 <script>
 
