--- a/covid19state.html
+++ b/covid19state.html
@@ -338,6 +338,7 @@
 <script src=USAData_362.js></script>
 <script src=USAData_363.js></script>
 <script src=USAData_364.js></script>
+<script src=USAData_365.js></script>
 
 <script>
 
