Updated data to 03/26/2021 (two days worth of data)

--- a/covid19int.html
+++ b/covid19int.html
@@ -396,6 +396,8 @@
 <script src=IntData_363.js></script>
 <script src=IntData_364.js></script>
 <script src=IntData_365.js></script>
+<script src=IntData_366.js></script>
+<script src=IntData_367.js></script>
 
 <script>
 
