--- a/covid19reg.html
+++ b/covid19reg.html
@@ -396,6 +396,8 @@
 <script src=RegData_363.js></script>
 <script src=RegData_364.js></script>
 <script src=RegData_365.js></script>
+<script src=RegData_366.js></script>
+<script src=RegData_367.js></script>
 
 <script>
 
