--- a/covid19usa.html
+++ b/covid19usa.html
@@ -364,6 +364,8 @@
 <script src=USAData_363.js></script>
 <script src=USAData_364.js></script>
 <script src=USAData_365.js></script>
+<script src=USAData_366.js></script>
+<script src=USAData_367.js></script>
 
 <script>
 
