--- a/covid19reg.html
+++ b/covid19reg.html
@@ -398,6 +398,7 @@
 <script src=RegData_365.js></script>
 <script src=RegData_366.js></script>
 <script src=RegData_367.js></script>
+<script src=RegData_368.js></script>
 
 <script>
 
