--- a/covid19usa.html
+++ b/covid19usa.html
@@ -366,6 +366,7 @@
 <script src=USAData_365.js></script>
 <script src=USAData_366.js></script>
 <script src=USAData_367.js></script>
+<script src=USAData_368.js></script>
 
 <script>
 
