--- a/covid19state.html
+++ b/covid19state.html
@@ -341,6 +341,7 @@
 <script src=USAData_365.js></script>
 <script src=USAData_366.js></script>
 <script src=USAData_367.js></script>
+<script src=USAData_368.js></script>
 
 <script>
 
