Updated data to 03/28/2021

--- a/covid19state.html
+++ b/covid19state.html
@@ -342,6 +342,7 @@
 <script src=USAData_366.js></script>
 <script src=USAData_367.js></script>
 <script src=USAData_368.js></script>
+<script src=USAData_369.js></script>
 
 <script>
 
