--- a/covid19int.html
+++ b/covid19int.html
@@ -399,6 +399,7 @@
 <script src=IntData_366.js></script>
 <script src=IntData_367.js></script>
 <script src=IntData_368.js></script>
+<script src=IntData_369.js></script>
 
 <script>
 
