--- a/covid19reg.html
+++ b/covid19reg.html
@@ -399,6 +399,7 @@
 <script src=RegData_366.js></script>
 <script src=RegData_367.js></script>
 <script src=RegData_368.js></script>
+<script src=RegData_369.js></script>
 
 <script>
 
