--- a/covid19usa.html
+++ b/covid19usa.html
@@ -368,6 +368,7 @@
 <script src=USAData_367.js></script>
 <script src=USAData_368.js></script>
 <script src=USAData_369.js></script>
+<script src=USAData_370.js></script>
 
 <script>
 
