--- a/covid19reg.html
+++ b/covid19reg.html
@@ -400,6 +400,7 @@
 <script src=RegData_367.js></script>
 <script src=RegData_368.js></script>
 <script src=RegData_369.js></script>
+<script src=RegData_370.js></script>
 
 <script>
 
