--- a/covid19state.html
+++ b/covid19state.html
@@ -343,6 +343,7 @@
 <script src=USAData_367.js></script>
 <script src=USAData_368.js></script>
 <script src=USAData_369.js></script>
+<script src=USAData_370.js></script>
 
 <script>
 
