--- a/covid19reg.html
+++ b/covid19reg.html
@@ -401,6 +401,7 @@
 <script src=RegData_368.js></script>
 <script src=RegData_369.js></script>
 <script src=RegData_370.js></script>
+<script src=RegData_371.js></script>
 
 <script>
 
