--- a/covid19state.html
+++ b/covid19state.html
@@ -344,6 +344,7 @@
 <script src=USAData_368.js></script>
 <script src=USAData_369.js></script>
 <script src=USAData_370.js></script>
+<script src=USAData_371.js></script>
 
 <script>
 
