Updated data to 03/31/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -402,6 +402,7 @@
 <script src=IntData_369.js></script>
 <script src=IntData_370.js></script>
 <script src=IntData_371.js></script>
+<script src=IntData_372.js></script>
 
 <script>
 
