--- a/covid19usa.html
+++ b/covid19usa.html
@@ -370,6 +370,7 @@
 <script src=USAData_369.js></script>
 <script src=USAData_370.js></script>
 <script src=USAData_371.js></script>
+<script src=USAData_372.js></script>
 
 <script>
 
