--- a/covid19reg.html
+++ b/covid19reg.html
@@ -402,6 +402,7 @@
 <script src=RegData_369.js></script>
 <script src=RegData_370.js></script>
 <script src=RegData_371.js></script>
+<script src=RegData_372.js></script>
 
 <script>
 
