Updated data to 04/01/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -403,6 +403,7 @@
 <script src=IntData_370.js></script>
 <script src=IntData_371.js></script>
 <script src=IntData_372.js></script>
+<script src=IntData_373.js></script>
 
 <script>
 
