--- a/covid19reg.html
+++ b/covid19reg.html
@@ -403,6 +403,7 @@
 <script src=RegData_370.js></script>
 <script src=RegData_371.js></script>
 <script src=RegData_372.js></script>
+<script src=RegData_373.js></script>
 
 <script>
 
