--- a/covid19state.html
+++ b/covid19state.html
@@ -346,6 +346,7 @@
 <script src=USAData_370.js></script>
 <script src=USAData_371.js></script>
 <script src=USAData_372.js></script>
+<script src=USAData_373.js></script>
 
 <script>
 
