--- a/covid19usa.html
+++ b/covid19usa.html
@@ -371,6 +371,7 @@
 <script src=USAData_370.js></script>
 <script src=USAData_371.js></script>
 <script src=USAData_372.js></script>
+<script src=USAData_373.js></script>
 
 <script>
 
