Updated data to 04/02/2021

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -404,6 +404,7 @@
 <script src=RegData_371.js></script>
 <script src=RegData_372.js></script>
 <script src=RegData_373.js></script>
+<script src=RegData_374.js></script>
 
 <script>
 
