--- a/covid19state.html
+++ b/covid19state.html
@@ -347,6 +347,7 @@
 <script src=USAData_371.js></script>
 <script src=USAData_372.js></script>
 <script src=USAData_373.js></script>
+<script src=USAData_374.js></script>
 
 <script>
 
