--- a/covid19int.html
+++ b/covid19int.html
@@ -404,6 +404,7 @@
 <script src=IntData_371.js></script>
 <script src=IntData_372.js></script>
 <script src=IntData_373.js></script>
+<script src=IntData_374.js></script>
 
 <script>
 
