--- a/covid19usa.html
+++ b/covid19usa.html
@@ -372,6 +372,7 @@
 <script src=USAData_371.js></script>
 <script src=USAData_372.js></script>
 <script src=USAData_373.js></script>
+<script src=USAData_374.js></script>
 
 <script>
 
