--- a/covid19int.html
+++ b/covid19int.html
@@ -405,6 +405,7 @@
 <script src=IntData_372.js></script>
 <script src=IntData_373.js></script>
 <script src=IntData_374.js></script>
+<script src=IntData_375.js></script>
 
 <script>
 
