--- a/covid19reg.html
+++ b/covid19reg.html
@@ -405,6 +405,7 @@
 <script src=RegData_372.js></script>
 <script src=RegData_373.js></script>
 <script src=RegData_374.js></script>
+<script src=RegData_375.js></script>
 
 <script>
 
