--- a/covid19state.html
+++ b/covid19state.html
@@ -348,6 +348,7 @@
 <script src=USAData_372.js></script>
 <script src=USAData_373.js></script>
 <script src=USAData_374.js></script>
+<script src=USAData_375.js></script>
 
 <script>
 
