--- a/covid19usa.html
+++ b/covid19usa.html
@@ -373,6 +373,7 @@
 <script src=USAData_372.js></script>
 <script src=USAData_373.js></script>
 <script src=USAData_374.js></script>
+<script src=USAData_375.js></script>
 
 <script>
 
