Updated data to 04/04/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -406,6 +406,7 @@
 <script src=IntData_373.js></script>
 <script src=IntData_374.js></script>
 <script src=IntData_375.js></script>
+<script src=IntData_376.js></script>
 
 <script>
 
