--- a/covid19reg.html
+++ b/covid19reg.html
@@ -406,6 +406,7 @@
 <script src=RegData_373.js></script>
 <script src=RegData_374.js></script>
 <script src=RegData_375.js></script>
+<script src=RegData_376.js></script>
 
 <script>
 
