--- a/covid19usa.html
+++ b/covid19usa.html
@@ -374,6 +374,7 @@
 <script src=USAData_373.js></script>
 <script src=USAData_374.js></script>
 <script src=USAData_375.js></script>
+<script src=USAData_376.js></script>
 
 <script>
 
