Updated date to 04/05/2021

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -407,6 +407,7 @@
 <script src=RegData_374.js></script>
 <script src=RegData_375.js></script>
 <script src=RegData_376.js></script>
+<script src=RegData_377.js></script>
 
 <script>
 
