--- a/covid19int.html
+++ b/covid19int.html
@@ -407,6 +407,7 @@
 <script src=IntData_374.js></script>
 <script src=IntData_375.js></script>
 <script src=IntData_376.js></script>
+<script src=IntData_377.js></script>
 
 <script>
 
