Updated data to 04/06/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -408,6 +408,7 @@
 <script src=IntData_375.js></script>
 <script src=IntData_376.js></script>
 <script src=IntData_377.js></script>
+<script src=IntData_378.js></script>
 
 <script>
 
