--- a/covid19reg.html
+++ b/covid19reg.html
@@ -408,6 +408,7 @@
 <script src=RegData_375.js></script>
 <script src=RegData_376.js></script>
 <script src=RegData_377.js></script>
+<script src=RegData_378.js></script>
 
 <script>
 
