--- a/covid19state.html
+++ b/covid19state.html
@@ -351,6 +351,7 @@
 <script src=USAData_375.js></script>
 <script src=USAData_376.js></script>
 <script src=USAData_377.js></script>
+<script src=USAData_378.js></script>
 
 <script>
 
