Updated data to 04/07/2021

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -409,6 +409,7 @@
 <script src=RegData_376.js></script>
 <script src=RegData_377.js></script>
 <script src=RegData_378.js></script>
+<script src=RegData_379.js></script>
 
 <script>
 
