--- a/covid19int.html
+++ b/covid19int.html
@@ -409,6 +409,7 @@
 <script src=IntData_376.js></script>
 <script src=IntData_377.js></script>
 <script src=IntData_378.js></script>
+<script src=IntData_379.js></script>
 
 <script>
 
