--- a/covid19state.html
+++ b/covid19state.html
@@ -352,6 +352,7 @@
 <script src=USAData_376.js></script>
 <script src=USAData_377.js></script>
 <script src=USAData_378.js></script>
+<script src=USAData_379.js></script>
 
 <script>
 
