--- a/covid19usa.html
+++ b/covid19usa.html
@@ -377,6 +377,7 @@
 <script src=USAData_376.js></script>
 <script src=USAData_377.js></script>
 <script src=USAData_378.js></script>
+<script src=USAData_379.js></script>
 
 <script>
 
