Updated data to 04/10/2021 (two days)

--- a/covid19int.html
+++ b/covid19int.html
@@ -411,6 +411,8 @@
 <script src=IntData_378.js></script>
 <script src=IntData_379.js></script>
 <script src=IntData_380.js></script>
+<script src=IntData_381.js></script>
+<script src=IntData_382.js></script>
 
 <script>
 
