--- a/covid19reg.html
+++ b/covid19reg.html
@@ -411,6 +411,8 @@
 <script src=RegData_378.js></script>
 <script src=RegData_379.js></script>
 <script src=RegData_380.js></script>
+<script src=RegData_381.js></script>
+<script src=RegData_382.js></script>
 
 <script>
 
