--- a/covid19state.html
+++ b/covid19state.html
@@ -354,6 +354,8 @@
 <script src=USAData_378.js></script>
 <script src=USAData_379.js></script>
 <script src=USAData_380.js></script>
+<script src=USAData_381.js></script>
+<script src=USAData_382.js></script>
 
 <script>
 
