Updated data to 04/11/2021

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -413,6 +413,7 @@
 <script src=RegData_380.js></script>
 <script src=RegData_381.js></script>
 <script src=RegData_382.js></script>
+<script src=RegData_383.js></script>
 
 <script>
 
