--- a/covid19int.html
+++ b/covid19int.html
@@ -413,6 +413,7 @@
 <script src=IntData_380.js></script>
 <script src=IntData_381.js></script>
 <script src=IntData_382.js></script>
+<script src=IntData_383.js></script>
 
 <script>
 
