--- a/covid19state.html
+++ b/covid19state.html
@@ -356,6 +356,7 @@
 <script src=USAData_380.js></script>
 <script src=USAData_381.js></script>
 <script src=USAData_382.js></script>
+<script src=USAData_383.js></script>
 
 <script>
 
