--- a/covid19usa.html
+++ b/covid19usa.html
@@ -381,6 +381,7 @@
 <script src=USAData_380.js></script>
 <script src=USAData_381.js></script>
 <script src=USAData_382.js></script>
+<script src=USAData_383.js></script>
 
 <script>
 
