Updated data to 04/12/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -414,6 +414,7 @@
 <script src=IntData_381.js></script>
 <script src=IntData_382.js></script>
 <script src=IntData_383.js></script>
+<script src=IntData_384.js></script>
 
 <script>
 
