--- a/covid19reg.html
+++ b/covid19reg.html
@@ -414,6 +414,7 @@
 <script src=RegData_381.js></script>
 <script src=RegData_382.js></script>
 <script src=RegData_383.js></script>
+<script src=RegData_384.js></script>
 
 <script>
 
