--- a/covid19state.html
+++ b/covid19state.html
@@ -357,6 +357,7 @@
 <script src=USAData_381.js></script>
 <script src=USAData_382.js></script>
 <script src=USAData_383.js></script>
+<script src=USAData_384.js></script>
 
 <script>
 
