--- a/covid19usa.html
+++ b/covid19usa.html
@@ -382,6 +382,7 @@
 <script src=USAData_381.js></script>
 <script src=USAData_382.js></script>
 <script src=USAData_383.js></script>
+<script src=USAData_384.js></script>
 
 <script>
 
