Updated data to 04/13/2021

--- a/covid19state.html
+++ b/covid19state.html
@@ -358,6 +358,7 @@
 <script src=USAData_382.js></script>
 <script src=USAData_383.js></script>
 <script src=USAData_384.js></script>
+<script src=USAData_385.js></script>
 
 <script>
 
