--- a/covid19int.html
+++ b/covid19int.html
@@ -415,6 +415,7 @@
 <script src=IntData_382.js></script>
 <script src=IntData_383.js></script>
 <script src=IntData_384.js></script>
+<script src=IntData_385.js></script>
 
 <script>
 
