--- a/covid19usa.html
+++ b/covid19usa.html
@@ -383,6 +383,7 @@
 <script src=USAData_382.js></script>
 <script src=USAData_383.js></script>
 <script src=USAData_384.js></script>
+<script src=USAData_385.js></script>
 
 <script>
 
