Updated data to 04/15/2021

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -417,6 +417,7 @@
 <script src=RegData_384.js></script>
 <script src=RegData_385.js></script>
 <script src=RegData_386.js></script>
+<script src=RegData_387.js></script>
 
 <script>
 
