--- a/covid19int.html
+++ b/covid19int.html
@@ -417,6 +417,7 @@
 <script src=IntData_384.js></script>
 <script src=IntData_385.js></script>
 <script src=IntData_386.js></script>
+<script src=IntData_387.js></script>
 
 <script>
 
