--- a/covid19state.html
+++ b/covid19state.html
@@ -360,6 +360,7 @@
 <script src=USAData_384.js></script>
 <script src=USAData_385.js></script>
 <script src=USAData_386.js></script>
+<script src=USAData_387.js></script>
 
 <script>
 
