--- a/covid19usa.html
+++ b/covid19usa.html
@@ -385,6 +385,7 @@
 <script src=USAData_384.js></script>
 <script src=USAData_385.js></script>
 <script src=USAData_386.js></script>
+<script src=USAData_387.js></script>
 
 <script>
 
