--- a/covid19int.html
+++ b/covid19int.html
@@ -418,6 +418,7 @@
 <script src=IntData_385.js></script>
 <script src=IntData_386.js></script>
 <script src=IntData_387.js></script>
+<script src=IntData_388.js></script>
 
 <script>
 
