--- a/covid19reg.html
+++ b/covid19reg.html
@@ -418,6 +418,7 @@
 <script src=RegData_385.js></script>
 <script src=RegData_386.js></script>
 <script src=RegData_387.js></script>
+<script src=RegData_388.js></script>
 
 <script>
 
