--- a/covid19usa.html
+++ b/covid19usa.html
@@ -386,6 +386,7 @@
 <script src=USAData_385.js></script>
 <script src=USAData_386.js></script>
 <script src=USAData_387.js></script>
+<script src=USAData_388.js></script>
 
 <script>
 
