Updated data to 04/17/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -419,6 +419,7 @@
 <script src=IntData_386.js></script>
 <script src=IntData_387.js></script>
 <script src=IntData_388.js></script>
+<script src=IntData_389.js></script>
 
 <script>
 
