--- a/covid19reg.html
+++ b/covid19reg.html
@@ -419,6 +419,7 @@
 <script src=RegData_386.js></script>
 <script src=RegData_387.js></script>
 <script src=RegData_388.js></script>
+<script src=RegData_389.js></script>
 
 <script>
 
