--- a/covid19state.html
+++ b/covid19state.html
@@ -362,6 +362,7 @@
 <script src=USAData_386.js></script>
 <script src=USAData_387.js></script>
 <script src=USAData_388.js></script>
+<script src=USAData_389.js></script>
 
 <script>
 
