--- a/covid19int.html
+++ b/covid19int.html
@@ -420,6 +420,7 @@
 <script src=IntData_387.js></script>
 <script src=IntData_388.js></script>
 <script src=IntData_389.js></script>
+<script src=IntData_390.js></script>
 
 <script>
 
