--- a/covid19reg.html
+++ b/covid19reg.html
@@ -420,6 +420,7 @@
 <script src=RegData_387.js></script>
 <script src=RegData_388.js></script>
 <script src=RegData_389.js></script>
+<script src=RegData_390.js></script>
 
 <script>
 
