--- a/covid19state.html
+++ b/covid19state.html
@@ -363,6 +363,7 @@
 <script src=USAData_387.js></script>
 <script src=USAData_388.js></script>
 <script src=USAData_389.js></script>
+<script src=USAData_390.js></script>
 
 <script>
 
