--- a/covid19usa.html
+++ b/covid19usa.html
@@ -388,6 +388,7 @@
 <script src=USAData_387.js></script>
 <script src=USAData_388.js></script>
 <script src=USAData_389.js></script>
+<script src=USAData_390.js></script>
 
 <script>
 
