Updated data to 04/19/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -421,6 +421,7 @@
 <script src=IntData_388.js></script>
 <script src=IntData_389.js></script>
 <script src=IntData_390.js></script>
+<script src=IntData_391.js></script>
 
 <script>
 
