--- a/covid19reg.html
+++ b/covid19reg.html
@@ -421,6 +421,7 @@
 <script src=RegData_388.js></script>
 <script src=RegData_389.js></script>
 <script src=RegData_390.js></script>
+<script src=RegData_391.js></script>
 
 <script>
 
