--- a/covid19state.html
+++ b/covid19state.html
@@ -364,6 +364,7 @@
 <script src=USAData_388.js></script>
 <script src=USAData_389.js></script>
 <script src=USAData_390.js></script>
+<script src=USAData_391.js></script>
 
 <script>
 
