--- a/covid19usa.html
+++ b/covid19usa.html
@@ -389,6 +389,7 @@
 <script src=USAData_388.js></script>
 <script src=USAData_389.js></script>
 <script src=USAData_390.js></script>
+<script src=USAData_391.js></script>
 
 <script>
 
