Updated data to 04/20/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -422,6 +422,7 @@
 <script src=IntData_389.js></script>
 <script src=IntData_390.js></script>
 <script src=IntData_391.js></script>
+<script src=IntData_392.js></script>
 
 <script>
 
