--- a/covid19reg.html
+++ b/covid19reg.html
@@ -422,6 +422,7 @@
 <script src=RegData_389.js></script>
 <script src=RegData_390.js></script>
 <script src=RegData_391.js></script>
+<script src=RegData_392.js></script>
 
 <script>
 
