--- a/covid19state.html
+++ b/covid19state.html
@@ -365,6 +365,7 @@
 <script src=USAData_389.js></script>
 <script src=USAData_390.js></script>
 <script src=USAData_391.js></script>
+<script src=USAData_392.js></script>
 
 <script>
 
